changed min-height for levels 2, 3 and 4 because it was too high, fixed the bug (when resizing and doing similar things) with adding fixed width to all levels

--- a/public/app/style.css
+++ b/public/app/style.css
@@ -23,7 +23,9 @@ canvas {
     display: block;
     left: -1000px;
 }
-img { display:none; }
+img { 
+	display:none;
+}
 .textarea {
     position: absolute;
     resize: none;
@@ -31,15 +33,11 @@ img { display:none; }
     width: 100;
 }
 .label-style {
-    color:rgb(38, 166, 154)
+    color: rgb(38, 166, 154);
 }
-
 .level1 {
     min-height: 560px;
 }
-
-.level2,
-.level3,
-.level4 {
-    min-height: 650px;
+.level2, .level3, .level4 {
+    min-height: 610px;
 }
